# themis.lat

./: .gitignore  LICENSE  README.md  check_overlap.py  docker-compose.prod.yml  docker-compose.yml  find_outliers.py  investigate_data.py  platanus-hack-project.json  project-description.md  query_exact_filters.py  query_filters.py  query_filters_clean.py  query_no_first_activity_filter.py  query_two_filters.py  show_query_logic.py
backend/: Dockerfile  alembic.ini  pyproject.toml  test_get_plan_tool.py  test_get_tender_batch.py  test_get_tender_single.py  test_plan_agent.py  test_read_award_attachment.py  test_read_award_result_batch.py  test_read_award_result_single.py  test_tender_ids.py  test_workflow.py
backend/alembic/versions/: 297c20036381_add_websocket_logs_table.py  add_wishlist_table.py
backend/app/: config.py  database.py  investigation_tasks.py  main.py  middleware.py  models.py  schemas.py  task_map.json  workflow.py
backend/app/agents/: fraud_detection_agent.py  plan_agent.py  ranking_agent.py  simple_agent.py  summary_agent.py
backend/app/api/: agent.py  websocket.py  wishlist.py
backend/app/prompts/: fraud_detection_agent.py  plan_agent.py  ranking_agent.py  simple_agent.py  summary_agent.py
backend/app/services/: websocket_log_service.py
backend/app/tools/: download_buyer_attachment.py  get_plan.py  read_award.py  read_award_result.py  read_award_result_attachment_doc.py  read_buyer_attachment_doc.py  read_buyer_attachments_table.py  read_supplier_attachments.py
backend/app/utils/: build_ranking_input.py  (+4 more)
notebooks/: download_data.sh  export_parquet.py  export_parquet_with_umap.ipynb  pyproject.toml
(+23 files in other folders)
